.metadata/.plugins/org.eclipse.cdt.ui/7thORpart.build.log
12:40:46 **** Incremental Build of configuration Debug for project 7thORpart ****
make all 
Building file: ../src/seventhORpart.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/seventhORpart.d" -MT"src/seventhORpart.o" -o "src/seventhORpart.o" "../src/seventhORpart.cpp"
../src/seventhORpart.cpp: In function ‘int main()’:
../src/seventhORpart.cpp:133:3: error: expected initializer before ‘obj’
  133 |   obj.add(obj1);
      |   ^~~
make: *** [src/subdir.mk:20: src/seventhORpart.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

12:40:47 Build Failed. 2 errors, 0 warnings. (took 900ms)

